--- a/app/views/posts/_show.html.erb
+++ b/app/views/posts/_show.html.erb
@@ -2,13 +2,9 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @post.name %>
+  <%= @post.postauthor %>
 </p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
 
 <p>
   <strong>Content:</strong>
@@ -23,4 +19,6 @@
 
 <h2>Comments</h2>
 <%= render @post.comments %>
+
+
 
