--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,15 +1,13 @@
-// Place all the styles related to the Posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
-
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,400&display=swap');
 @import 'reset.css';
 
 .posts{
     background-color: #292929;
-     
+     height: 100vh;
+     width: 100%;
+     font-family: 'Open Sans', sans-serif;
    &_container {
-       margin: 40px 60px;
+      padding: 40px 60px;
 
        .post_creation_action {
            float: right;
@@ -19,22 +17,32 @@
            border: none;
            border-radius: 2px;
            padding: 8px 16px;
-           
+           margin-bottom: 24px;
        }
        
    }
 }
 
+
 .post {
-    width: 900px;
+    width: 600px;
     background-color: #C4C4C4;
-    padding: 24px 56px 56px;
-    font-family: 'Open Sans', sans-serif;
-    color: #1B1D1A;
+
+    &_contentFull {
+
+        
+        padding: 24px 56px 56px;
+        font-family: 'Open Sans', sans-serif;
+        color: #1B1D1A;
+    }
+
     &_additional {
         margin-bottom: 24px;
+        display: flex;
         justify-content: space-between;
         font-size: 14px;
+
+        
        
     }
 
@@ -47,9 +55,37 @@
     &_content {
         font-size: 22px;
         font-weight: regular;
+        line-height: 1.2;
     }
 
     &_actions {
+        text-decoration: none;
+        float: right;
+        width: 100px;
+        display: flex;
+        justify-content: space-between;
+        font-size: 14px;
+        color: #1B1D1A;
 
+        :hover {
+            font-weight: bold;
+            border-bottom: 1px solid ;
+        }
     }
 }
+
+.comments {
+    
+    background-color: #1B1D1A;
+    width: 100%;
+
+    &_action {
+        display: flex;
+        justify-content: space-between;
+    }
+
+   
+
+}
+
+
