--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -13,8 +13,8 @@
 <% end %>
 
 <div class="field">
-<p>Автор <%= form.label :author %></p>
-<%= form.text_field :author %>
+<p>Автор <%= form.label :postauthor %></p>
+<%= form.text_field :postauthor %>
 </div>
 
 
