--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,7 +3,7 @@
 
 .posts{
     background-color: #292929;
-     height: 100vh;
+     height: 100%;
      width: 100%;
      font-family: 'Open Sans', sans-serif;
    &_container {
@@ -25,8 +25,9 @@
 
 
 .post {
-    width: 600px;
+    width: 650px;
     background-color: #C4C4C4;
+    margin-bottom: 40px;
 
     &_contentFull {
 
@@ -42,6 +43,17 @@
         justify-content: space-between;
         font-size: 14px;
 
+        button {
+            text-decoration: none;
+            color: #1B1D1A;
+            font-weight: bold;
+            background: none;
+            border: none;
+
+            &:hover {
+                color: #1B1D1A;
+            }
+        }
         
        
     }
