--- a/app/views/promo/index.html.erb
+++ b/app/views/promo/index.html.erb
@@ -1,2 +1,648 @@
 <h1>Promo#index</h1>
 <p>Find me in app/views/promo/index.html.erb</p>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="stylesheets/style.css">
+    <script src="javascripts/jquery-3.5.1.js" charset="utf-8"></script>
+    <script src="javascripts/script.js" charset="utf-8"></script>
+    <title>Промо</title>
+    <style media="screen">
+    @font-face {
+     font-family: 'Gosha Regular';
+     src: url("fonts/GoshaR.woff") format('woff');
+    }
+    @font-face {
+     font-family: 'Gosha Ultralight';
+     src: url("fonts/GoshaU.woff") format('woff');
+    }
+      #grid_section6 {
+        position: relative;
+        display: grid;
+        grid-template:
+        "...     text1     text1      text1     text1       ...       ...     ..."    94px
+        "...     text1     text1      text1     text1       ...       img1    ..."   46px
+        "...     ...       ...        ...       ...         ...       img1    ..."   40px
+        "...     ...       img2       ...       ...         ...       img1    ..."   371px
+        "...     ...       img2       ...       ...         ...       ...     ..."    13px
+        "...     ...       img2       ...       text2       text2     text2   ..."  120px
+        "...     ...       ....       ...       text2       text2     text2   ..."  20px
+        /100px   1fr       426px      2.26fr    2.9fr       1.4fr     284px   100px
+        ;
+        grid-gap: 0px;
+        margin-left: 0px;
+        margin-right: 0px;
+        top: 95px;
+        margin-bottom: 95px;
+        height: 706px;
+        width: 100%;
+      }
+
+      .text1 {
+        grid-area: text1;
+        position: relative;
+        display: block;
+      }
+      .img1 {
+        grid-area: img1;
+        position: relative;
+        display: block;
+        background-size: contain;
+        background-repeat: no-repeat;
+      }
+      .text2 {
+        grid-area: text2;
+        position: relative;
+        display: block;
+      }
+      .img2 {
+        grid-area: img2;
+        position: relative;
+        display: block;
+        background-size: contain;
+        background-repeat: no-repeat;
+      }
+      .section1 {
+        position: relative;
+        margin: 0px;
+        background-color: #17031A;
+        height: 85px;
+        width: 100%;
+      }
+      #grid_section1 {
+        display: grid;
+        grid-template-columns: 62% 1fr 1fr 1fr;
+        grid-template-rows: 85px;
+        grid-gap: 52px;
+        margin-left: 60px;
+        margin-right: 60px;
+        margin-top: 0px;
+        margin-bottom: 0px
+      }
+      #grid > div {
+        padding: 0px;
+        background: gold;
+        text-align: left;
+      }
+      .section2 {
+        position: relative;
+        display: flex;
+
+        flex-direction: column;
+        margin: 0px;
+        background-color: #17031A;
+        height: 897px;
+        width: 100%;
+      }
+      .section3 {
+        position: relative;
+        margin: 0px;
+        background-color: #17031A;
+        height: 897px;
+        width: 100%;
+      }
+      .section4 {
+        position: relative;
+        margin: 0px;
+        background-color: #9A2EA9;
+        height: 897px;
+        width: 100%;
+      }
+      .section5 {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 0px;
+        background-color: #17031A;
+        height: 502px;
+        width: 100%;
+      }
+      .section6 {
+        position: relative;
+        margin: 0px;
+        background-color: #17031A;
+        height: 896px;
+        width: 100%;
+        background-image: url('img/s1.svg');
+      }
+      .section7 {
+        position: relative;
+        margin: 0px;
+        display: flex;
+        vertical-align: center;
+        background-color: #17031A;
+        height: 502px;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+      }
+      .section8 {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        margin: 0px;
+        background-color: #9A2EA9;
+        height: 897px;
+        width: 100%;
+      }
+      .section9 {
+        position: relative;
+        margin: 0px;
+        background-color: #17031A;
+        height: 1947px;
+        /* width: 100%; */
+        background-image: url('img/s2.svg');
+
+      }
+      .section1_p1 {
+        font-family: Gosha Regular;
+        font-size: 48px;
+        margin-top: 15px;
+        color: #8CC64E;
+      }
+      .section1_p2 {
+        font-family: Gosha Regular;
+        font-size: 36px;
+        margin-top: 21px;
+        color: #9A2EA9;
+      }
+      .section1_p3 {
+        font-family: Gosha Ultralight;
+        font-size: 36px;
+        margin-top: 21px;
+        color: #9A2EA9;
+      }
+      .section1_p4 {
+        font-family: Gosha Ultralight;
+        font-size: 36px;
+        margin-top: 21px;
+        color: #9A2EA9;
+      }
+      .section2_p1 {
+        position: relative;
+        background: url('img/oni.svg');
+        /* background: url('img/oni.svg'); */
+        margin-left: 60px;
+        width: 91.67vw;
+        height: 61.87vh;
+        background-size: contain;
+        background-repeat: no-repeat;
+      }
+      .section2_img1 {
+        position: relative;
+        display: flex;
+        background: url('img/s2i1.svg');
+        margin-left: 60px;
+        margin-top: 15px;
+        width: 199px;
+        height: 117px;
+        background-repeat: no-repeat;
+      }
+      .s2 {
+        display: flex;
+        flex-wrap: wrap;
+        align-self: center;
+        width: 100%;
+        margin-left: 60px;
+        margin-right: 60px;
+
+      }
+      .section2_p2 {
+        position: relative;
+        display: flex;
+        font-family: Gosha Regular;
+        /* margin-left: 31px; */
+        margin-top: 0px;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-right: 60px;
+        font-size: 144px;
+        color: #8CC64E;
+      }
+      .section3_p1 {
+        position: relative;
+        display: block;
+        font-size: 144px;
+        font-family: Gosha Regular;
+        margin-left: 60px;
+        top: 101px;
+        color: #9A2EA9;
+      }
+      .section4_p1 {
+        position: relative;
+        font-family: Gosha Regular;
+        font-size: 144px;
+        margin-left: 60px;
+        top: 390px;
+        width: 1319px;
+        font-size: 144px;
+        color: #17031A;
+      }
+      .section5_p1 {
+        position: relative;
+        display: flex;
+        font-family: Gosha Regular;
+        font-size: 144px;
+        margin-left: 60px;
+        /* top: 164px; */
+        width: 1319px;
+        font-size: 144px;
+        color: #9A2EA9;
+      }
+      .section5_img1 {
+        position: relative;
+        display: flex;
+        background: url('img/s5i1.svg');
+        margin-right: 60px;
+        width: 275px;
+        height: 229px;
+        background-size: contain;
+        background-repeat: no-repeat;
+      }
+      .text1 {
+        display: flex;
+        text-align: center;
+        vertical-align: center;
+        align-items: center;
+        background-color: #8CC64E;
+      }
+      .text1_p1 {
+        position: relative;
+        font-family: Gosha Regular;
+        font-size: 48px;
+        width: 1319px;
+        color: #17031A;
+      }
+      .text2 {
+        display: flex;
+        text-align: center;
+        vertical-align: center;
+        align-items: center;
+        background-color: #8CC64E;
+      }
+      .text1_p2 {
+        position: relative;
+        font-family: Gosha Regular;
+        font-size: 48px;
+        width: 1319px;
+        color: #17031A;
+      }
+      .img1 {
+        position: relative;
+        background: url('img/s6i1.svg');
+        margin: 0px;
+        width: 289px;
+        height: 457px;
+        background-repeat: no-repeat;
+      }
+      .img2 {
+        position: relative;
+        background: url('img/s6i2.svg');
+        margin: 0px;
+        width: 426px;
+        height: 504px;
+        background-repeat: no-repeat;
+      }
+      .section7_p1 {
+        position: relative;
+        display: flex;
+        font-family: Gosha Regular;
+        font-size: 144px;
+        color: #9A2EA9;
+      }
+      .section8_p1 {
+        position: relative;
+        display: flex;
+        font-family: Gosha Regular;
+        font-size: 144px;
+        margin-top: 220px;
+        width: 830px;
+        margin-left: 60px;
+        color: #17031A;
+      }
+      .section8_p2 {
+        position: relative;
+        display: flex;
+        font-family: Gosha Ultralight;
+        font-size: 36px;
+        margin-top: 77px;
+        width: 830px;
+        color: #17031A;
+        align-self: flex-end;
+        margin-right: 60px
+      }
+      .block1 {
+        position: relative;
+        display: flex;
+        width: 23.82%;
+        height: 140px;
+        margin-left: 38.09%;
+        background-color: #9A2EA9;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .block_p1 {
+        position: relative;
+        display: flex;
+        font-family: Gosha Regular;
+        font-size: 48px;
+        color: #17031A;
+      }
+      .block2 {
+        position: relative;
+        display: flex;
+        width: 76.11%;
+        height: 1128px;
+        margin-left: 11.945%;
+        top: 63px;
+        background-color: #17031A;
+        vertical-align: center;
+        align-items: center;
+        justify-content: center;
+        border: 1.5px solid #9A2EA9;
+      }
+      .block_p2 {
+        position: relative;
+        display: flex;
+        font-family: Gosha Ultralight;
+        font-size: 36px;
+        width: 1032px;
+        color: #9A2EA9;
+      }
+      .knopka1 {
+        position: relative;
+        display: flex;
+        width: 60.69%;
+        margin-left: 19.655%;
+        margin-top: 207px;
+        height: 108px;
+        background-color: #17031A;
+        vertical-align: center;
+        align-items: center;
+        justify-content: center;
+        border: 1.5px solid #9A2EA9;
+      }
+      .knopka1_p {
+        position: relative;
+        display: flex;
+        font-family: Gosha Regular;
+        font-size: 48px;
+        color: #9A2EA9;
+      }
+      .knopka2 {
+        position: relative;
+        display: flex;
+        width: 60.69%;
+        margin-left: 19.655%;
+        margin-top: 53px;
+        background-color: #8CC64E;
+        height: 108px;
+        vertical-align: center;
+        align-items: center;
+        justify-content: center;
+        border: 1.5px solid #9A2EA9;
+      }
+      .knopka2_p {
+        position: relative;
+        display: flex;
+        font-family: Gosha Regular;
+        font-size: 48px;
+        color: #17031A;
+      }
+      .lozh1 {
+        position: absolute;
+        background: url('img/lozh.svg');
+        width: 426px;
+        height: 504px;
+        left: 61px;
+        top: 1405px;
+      }
+      .lozh2 {
+        position: absolute;
+        background: url('img/lozh.svg');
+        width: 426px;
+        height: 504px;
+        left: 306px;
+        top: 1537px;
+      }
+      .lozh3 {
+        position: absolute;
+        background: url('img/lozh.svg');
+        width: 426px;
+        height: 504px;
+        left: 565px;
+        top: 1377px;
+      }
+      .lozh4 {
+        position: absolute;
+        background: url('img/lozh.svg');
+        width: 426px;
+        height: 504px;
+        left: 799px;
+        top: 1267px;
+      }
+      .lozh5 {
+        position: absolute;
+        background: url('img/lozh.svg');
+        width: 426px;
+        height: 504px;
+        left: 948px;
+        top: 1616px;
+      }
+      .null {
+        position: relative;
+        background: url('img/null.svg');
+        justify-content: center;
+        margin-left: 41.32%;
+        margin-top: 225px;
+        width: 17.36%;
+        height: 146px;
+        background-repeat: no-repeat;
+      }
+      .krest1 {
+        position: relative;
+        background: url('img/krest.svg');
+        margin-left: 360px;
+        margin-top: 21px;
+        width: 41px;
+        height: 41px;
+        background-repeat: no-repeat;
+      }
+      .krest2 {
+        position: relative;
+        background: url('img/krest.svg');
+        margin-left: 360px;
+        margin-top: 21px;
+        width: 41px;
+        height: 41px;
+        background-repeat: no-repeat;
+      }
+      .krest3 {
+        position: relative;
+        background: url('img/krest.svg');
+        margin-left: 360px;
+        margin-top: 21px;
+        width: 41px;
+        height: 41px;
+        background-repeat: no-repeat;
+      }
+      .krest4 {
+        position: relative;
+        background: url('img/krest.svg');
+        margin-left: 360px;
+        margin-top: 21px;
+        width: 41px;
+        height: 41px;
+        background-repeat: no-repeat;
+      }
+      .krest5 {
+        position: relative;
+        background: url('img/krest.svg');
+        margin-left: 360px;
+        margin-top: 21px;
+        width: 41px;
+        height: 41px;
+        background-repeat: no-repeat;
+      }
+      .hidden {
+        display: none;
+      }
+    </style>
+    <script type="text/javascript">
+  $(document).ready(function(){
+    $(".krest1").click(function(){
+      $(this).addClass("hidden");
+      $(".lozh1").addClass("hidden");
+    });
+    $(".krest2").click(function(){
+      $(this).addClass("hidden");
+      $(".lozh2").addClass("hidden");
+    });
+    $(".krest3").click(function(){
+      $(this).addClass("hidden");
+      $(".lozh3").addClass("hidden");
+    });
+    $(".krest4").click(function(){
+      $(this).addClass("hidden");
+      $(".lozh4").addClass("hidden");
+    });
+    $(".krest5").click(function(){
+      $(this).addClass("hidden");
+      $(".lozh5").addClass("hidden");
+    });
+  });
+</script>
+
+  </head>
+  <body>
+    <div class="section1">
+      <div id="grid_section1" class="">
+        <div class="section1_p1">квазоид</div>
+        <div class="section1_p2">промо</div>
+        <div class="section1_p3">о нас</div>
+        <div class="section1_p4">посты</div>
+      </div>
+    </div>
+
+    <div class="section2">
+      <div class="section2_p1"></div>
+      <div class="s2">
+        <div class="section2_img1"></div>
+        <div class="section2_p2">следят за нами</div>
+      </div>
+    </div>
+
+    <div class="section3">
+      <div class="section3_p1">они рассказывают сказки</div>
+      <div class="null"></div>
+    </div>
+
+    <div class="section4">
+      <div class="section4_p1">но ты не веришь в их сладкую ложь</div>
+    </div>
+
+    <div class="section5">
+      <div class="section5_p1">они называют тебя безумцем</div>
+      <div class="section5_img1"></div>
+    </div>
+
+    <div class="section6">
+    <div class="setka1">
+      <div id="grid_section6">
+        <div class="text1">
+          <div class="text1_p1">они опоили дурманом весь мир</div>
+        </div>
+        <div class="img1"></div>
+        <div class="img2"></div>
+        <div class="text2">
+          <div class="text1_p1">и ты остался один...</div>
+        </div>
+      </div>
+    </div>
+    </div>
+
+    <div class="section7">
+      <div class="section7_p1">или нет?</div>
+    </div>
+
+    <div class="section8">
+      <div class="section8_p1">у тебя есть квазоид</div>
+        <div class="section8_p2">Это медиа-сервис, где ты можешь общаться, делиться новостями, обсуждать теории и спорить. Это больше, чем социальная сеть, это тайное контробщество по борьбе с мировыми заговорами, объединяющее энтузиастов-исследователей, решившихся на прыжок в кроличью нору.</div>
+    </div>
+
+    <div class="section9">
+        <div class="block1">
+          <div class="block_p1">манифест</div>
+        </div>
+        <div class="block2">
+          <div class="block_p2">Читающим наше Квазоидное Истинное Слово.
+          <br>Только мы — лицо нашего Времени. Только мы — борцы за свободу. Только мы не преминем добраться до сути вещей. Ни мировое правительство, ни бесчестные заговорщики не встанут у нас на пути. Мы дадим им отпор, выудим из недр их архивов засекреченные файлы, обнажим реальность, явим её миру такой, какая она есть на самом деле.
+          <br>Вымойте ваши руки, прикасавшиеся к грязной слизи официальных источников.
+          <br>Мы приказываем чтить права исследователей непознанного, сокрытого. Вступив в наше тайное контробщество, вы обретёте:
+          <br>1. Братство любителей заговорщического и конспирологического.
+          <br>2. Горячие споры на пути к Истине.
+          <br>3. Гипертекстовые доски событий.
+          <br>4. Вклад в рассследование мирового масштаба.
+          <br>Отбросьте грязные клейма заговорщиков: «конспиролог», «безумец», «мракобес». Да здравствует квазоид!
+          <br><br>
+          Безымянные сиблинги тайного контробщества
+          <br>Москва, 2021. Октябрь</div>
+        </div>
+        <div class="knopka1">
+          <div class="knopka1_p">email</div>
+        </div>
+        <div class="knopka2">
+          <div class="knopka2_p">подписаться</div>
+        </div>
+    </div>
+
+    <div class="section1">
+      <div id="grid_section1" class="">
+        <div class="section1_p1">квазоид</div>
+        <div class="section1_p2">промо</div>
+        <div class="section1_p3">о нас</div>
+        <div class="section1_p4">посты</div>
+      </div>
+    </div>
+
+    <div class="lozh1">
+      <div class="krest1"></div>
+    </div>
+    <div class="lozh4">
+      <div class="krest4"></div>
+    </div>
+    <div class="lozh2">
+      <div class="krest2"></div>
+    </div>
+    <div class="lozh5">
+      <div class="krest5"></div>
+    </div>
+    <div class="lozh3">
+      <div class="krest3"></div>
+    </div>
+  </body>
+</html>
