--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,10 +15,10 @@
 <%= link_to 'Back', posts_path %>
 
 <h2>Add a comment:</h2>
-<%= render "comments/form" %>
+<%= render "commentts/form" %>
 
 <h2>Comments</h2>
-<%= render @post.comments %>
+<%= render @post.commentts %>
 
 
 
