--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -14,14 +14,11 @@ pre {
   font-size: 11px; }
 
 a {
-  color: #000; }
+  
+  text-decoration: none;
 
-a:visited {
-  color: #666; }
-
-a:hover {
-  color: #fff;
-   }
+  
+}
 
 th {
   padding-bottom: 5px; }
