--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,14 @@
 <p id="notice"><%= notice %></p>
 
 
+<div class="section1">
+      <div id="grid_section1" class="">
+        <div class="section1_p1">квазоид</div>
+        <div class="section1_p2"><a href="/promo/index">промо</a></div>
+        <div class="section1_p3"><a href="/about/index">о нас</a></div>
+        <div class="section1_p4"><%= link_to "посты", posts_path %></div>
+      </div>
+</div>
 
 <section class="posts">
 <div class="posts_container">
@@ -14,7 +22,7 @@
 
 
         <div class="post_additional">
-        <p><%= post.created_at %></p>
+        <p>Опубликовано <%= post.created_at %></p>
         <button><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></button>
         </div>
 
@@ -22,26 +30,26 @@
         <p class='post_content'><%= post.content %></p>
 
         <div class="post_actions">
-        <p><%= link_to 'Show', post %></p>
-        <p><%= link_to 'Edit', edit_post_path(post) %></p>
+        <button><%= link_to 'Show', post %></button>
+        <button><%= link_to 'Edit', edit_post_path(post) %></button>
         </div>
 
 
     </div>
 
 
-    <div class="comments">
+    <%# <div class="comments">
 
     <div class="comments_action">
-        <%# <%= render "comments/form" %> %>
-        <button class="comment_publish"></button>
-    </div>
+        <%# <%= render "commentts/form" %> 
+        <%# <button class="comment_publish"></button>
+    </div> %>
 
-    <div class="comments_list">
+    <%# <div class="comments_list">
         
     </div>
 
-    </div>
+    </div>  %>
 
 
 </div>
