--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,11 +2,11 @@
 
 
 <div class="section1">
-      <div id="grid_section1" class="">
-        <div class="section1_p1">квазоид</div>
-        <div class="section1_p2"><a href="/promo/index">промо</a></div>
-        <div class="section1_p3"><a href="/about/index">о нас</a></div>
-        <div class="section1_p4"><%= link_to "посты", posts_path %></div>
+      <div id="grid_sectionposts1" class="">
+        <div class="sectionposts1_p1">квазоид</div>
+        <div class="sectionposts1_p2"><a href="/promo/index">промо</a></div>
+        <div class="sectionposts1_p3"><a href="/about/index">о нас</a></div>
+        <div class="sectionposts1_p4"><%= link_to "посты", posts_path %></div>
       </div>
 </div>
 
