--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'Gosha Regular';
-    src: url("fonts/GoshaR.woff") format('woff');
+    src: url("GoshaR.woff") format('woff');
    }
    @font-face {
     font-family: 'Gosha Ultralight';
-    src: url("fonts/GoshaU.woff") format('woff');
+    src: url("GoshaU.woff") format('woff');
    }
      .sectionabout1 {
        position: relative;
@@ -118,18 +118,18 @@
        font-family: Gosha Ultralight;
        font-size: 36px;
        margin-top: 21px;
-       
+
        a {
          color: #D82C2C;
-         
-         
+
+
        }
      }
      .sectionabout1_p3 {
        font-family: Gosha Regular;
        font-size: 36px;
        margin-top: 21px;
-       
+
        a {
          color: #D82C2C;
        }
@@ -138,7 +138,7 @@
        font-family: Gosha Ultralight;
        font-size: 36px;
        margin-top: 21px;
-       
+
        a {
          color: #D82C2C;
        }
