--- a/app/assets/stylesheets/promo.scss
+++ b/app/assets/stylesheets/promo.scss
@@ -1,13 +1,13 @@
 @font-face {
     font-family: 'Gosha Regular';
-    src: url("fonts/GoshaR.woff") format('woff');
+    src: url("GoshaR.woff") format('woff');
    }
    @font-face {
     font-family: 'Gosha Ultralight';
-    src: url("fonts/GoshaU.woff") format('woff');
+    src: url("GoshaU.woff") format('woff');
    }
 
-   
+
 .section1 {
   position: relative;
   margin: 0px;
