--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -157,6 +157,7 @@
        position: relative;
        display: flex;
        font-family: Gosha Regular;
+       line-height: 1.05;
        /* margin-left: 31px; */
        margin-top: 0px;
        margin-left: 60px;
@@ -168,6 +169,7 @@
        display: block;
        font-size: 140px;
        font-family: Gosha Regular;
+       line-height: 1.05;
        margin-left: 60px;
        top: 101px;
        color: #292929;
@@ -178,6 +180,7 @@
      /* width: 556px; */
      font-size: 52.5px;
      font-family: Gosha Regular;
+     line-height: 1.004;
      margin-left: 60px;
      margin-top: 160px;
      color: #292929;
@@ -195,6 +198,7 @@
    }
    .block1_p1 {
      font-family: Gosha Regular;
+     line-height: 1.05;
      font-size: 70px;
      margin: 60px;
      width: 1148px;
@@ -203,6 +207,7 @@
    }
    .block1_p2 {
      font-family: Gosha Regular;
+     line-height: 1.004;
      font-size: 40px;
      margin-left: 60px;
      width: 1161px;
@@ -221,6 +226,7 @@
        position: relative;
        display: flex;
        font-family: Gosha Ultralight;
+       line-height: 1.004;
        font-size: 40px;
        margin-left: 60px;
        margin-top: 60px;
@@ -270,6 +276,7 @@
        position: relative;
        display: flex;
        font-family: Gosha Ultralight;
+       line-height: 1.004;
        font-size: 40px;
        width: 1281;
        color: #C4C4C4;
@@ -281,6 +288,7 @@
        position: relative;
        display: flex;
        font-family: Gosha Regular;
+       line-height: 1.05;
        font-size: 134px;
        color: #292929;
        margin-left: 60px;
@@ -320,6 +328,7 @@
      .bp2 {
        font-size: 40px;
        font-family: Gosha Ultralight;
+       line-height: 1.004;
        color: #292929;
        margin-left: 0px;
        margin-top: 93px;
@@ -328,6 +337,7 @@
        position: relative;
        display: flex;
        font-family: Gosha Regular;
+       line-height: 1.05;
        font-size: 98px;
        margin-top: 70px;
        margin-left: 60px;
@@ -337,6 +347,7 @@
        position: relative;
        display: flex;
        font-family: Gosha Ultralight;
+       line-height: 1.004;
        font-size: 36px;
        margin-top: 40px;
        width: 682px;
@@ -357,6 +368,7 @@
        position: relative;
        display: flex;
        font-family: Gosha Regular;
+       line-height: 1.05;
        font-size: 98px;
        margin-top: 0px;
        margin-left: 60px;
