--- a/app/assets/stylesheets/promo.scss
+++ b/app/assets/stylesheets/promo.scss
@@ -233,6 +233,7 @@
        display: block;
        font-size: 144px;
        font-family: 'Gosha Regular';
+       line-height: 1.05;
        margin-left: 60px;
        top: 101px;
        color: #9A2EA9;
@@ -240,6 +241,7 @@
      .section4_p1 {
        position: relative;
        font-family: 'Gosha Regular';
+       line-height: 1.004;
        font-size: 144px;
        margin-left: 60px;
        top: 390px;
@@ -251,6 +253,7 @@
        position: relative;
        display: flex;
        font-family: 'Gosha Regular';
+       line-height: 1.05;
        font-size: 144px;
        margin-left: 60px;
        /* top: 164px; */
@@ -323,6 +326,7 @@
        position: relative;
        display: flex;
        font-family: 'Gosha Regular';
+       line-height: 1.004;
        font-size: 144px;
        margin-top: 220px;
        width: 830px;
@@ -333,6 +337,7 @@
        position: relative;
        display: flex;
        font-family: 'Gosha Ultralight';
+       line-height: 1.05;
        font-size: 36px;
        margin-top: 77px;
        width: 830px;
@@ -366,6 +371,7 @@
        margin-left: 11.945%;
        top: 63px;
        background-color: #17031A;
+       line-height: 1.05;
        vertical-align: center;
        align-items: center;
        justify-content: center;
