--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -38,12 +38,16 @@
     
     a {
       color: #D82C2C;
+
+      &:active {
+        
+      }
       
       
     }
   }
   .sectionposts1_p3 {
-    font-family: Gosha Regular;
+    font-family: Gosha Ultralight;
     font-size: 36px;
     margin-top: 21px;
     
@@ -52,7 +56,7 @@
     }
   }
   .sectionposts1_p4 {
-    font-family: Gosha Ultralight;
+    font-family: Gosha Regular;
     font-size: 36px;
     margin-top: 21px;
     
@@ -214,7 +218,7 @@
       border: none;
       color: #1B1D1A;
       background-color: #D82C2C;
-      
+
   
       &:hover {
           color: rgba($color: #1B1D1A, $alpha: 0.6);
