--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -61,7 +61,7 @@
 
       <div class="sectionabout7">
         <div class="sectionabout7_p1">Решения, которые предлагает Квазоид</div>
-        <div class="sectionabout7_block1" id="grid_section7">
+        <div class="sectionabout7_block1" id="grid_sectionabout7">
           <div class="bp1">1</div>
           <div class="bp2">Присоединиться к тайной <br>контрорганизации повстанцев, <br>ведущих борьбу с мировыми <br>заговорами под прикрытием <br>нарочитого постмодернизма</div>
           <div class="bp1">2</div>
