--- a/app/views/commentts/_commentt.html.erb
+++ b/app/views/commentts/_commentt.html.erb
@@ -1,8 +1,20 @@
+<div>
+
+<% if user_signed_in? && current_user.id == comment.user_id  %>
 <p>
-	<b>Commenter:</b>
-	<%= commentt.commenter %>
+  <%= link_to 'Destroy Comment', [comment.post, comment],
+               :confirm => 'Are you sure?',
+               :method => :delete %>
 </p>
+<% end %>
+<p>
+  <b>Commenter:</b>
+  <%= User.find(comment.user_id).email %>
+</p>
+
 <p>
 	<b>Comment:</b>
 	<%= commentt.body %>
 </p>
+
+</div>
