--- a/app/views/commentts/_form.html.erb
+++ b/app/views/commentts/_form.html.erb
@@ -1,13 +1,14 @@
 <%= form_for([@post, @post.commentts.build]) do |f| %>
+	
 	<div class="field">
-		<%= f.label :commenter %><br />
-		<%= f.text_field :commenter %>
-	</div>
+        <%= current_user.email %>
+    </div>
 	<div class="field">
 		<%= f.label :body %><br />
 		<%= f.text_area :body %>
 	</div>
 		<div class="actions">
 		<%= f.submit %>
+		</div>
 	</div>
 <% end %>
