--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,17 +13,45 @@
  *= require_tree .
  *= require_self
  */
+.top_menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 60px;
+  margin-bottom: 40px;
+  background: #eee;
+  border-bottom: 1px solid #ddd;
+}
 
- .top_menu {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 100%;
-    height: 60px;
-    margin-bottom: 40px;
-    background: #eee;
-    border-bottom: 1px solid #ddd;
-  }
-  .top_menu a {
-    margin: 0 20px;
-  }
+.top_menu a {
+  margin: 0 20px;
+}
+
+.navbar_actions {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+}
+
+.navbar_actions .myaccount_icon {
+  border-radius: 100px;
+  background-color: blue;
+  width: 30px;
+  height: 30px;
+  margin-right: 20px;
+}
+
+.navbar_actions p {
+  margin-right: 40px;
+}
+/*# sourceMappingURL=application.css.map */
