--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,27 +1,20 @@
-body {
-  background-color: #fff;
-  color: #333;
-  margin: 0; }
+// body {
+//   background-color: #fff;
+//   color: #333;
+//   }
 
 body, p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px; }
 
-pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px; }
+// pre {
+//   background-color: #eee;
+//   padding: 10px;
+//   font-size: 11px; }
 
 a {
-  
   text-decoration: none;
-  color: #1B1D1A;
-
-  &:hover {
-    color: rgba($color: #1B1D1A, $alpha: 0.6);
-  }
-  
 }
 
 th {
