--- a/app/views/commentts/_commentt.html.erb
+++ b/app/views/commentts/_commentt.html.erb
@@ -1,15 +1,15 @@
 <div>
 
-<% if user_signed_in? && current_user.id == comment.user_id  %>
+<% if user_signed_in? && current_user.id == commentt.user_id  %>
 <p>
-  <%= link_to 'Destroy Comment', [comment.post, comment],
+  <%= link_to 'Destroy Comment', [commentt.post, commentt],
                :confirm => 'Are you sure?',
                :method => :delete %>
 </p>
 <% end %>
 <p>
   <b>Commenter:</b>
-  <%= User.find(comment.user_id).email %>
+  <%= User.find(commentt.user_id).email %>
 </p>
 
 <p>
