--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,17 @@
   </head>
 
   <body>
-  <div class="top_menu">
-  <% if user_signed_in? %>
-    <%= link_to 'Account', edit_user_registration_path %> | <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
-  <% else %>
-    <%= link_to 'Sign In', new_user_session_path %> | <%= link_to 'Sign Up', new_user_registration_path %>
-  <% end %>
+  <div class="top-menu">
+    <h3 class='logo'>Квазоид</h3>
+      <div class="navbar_actions">
+        <div class='myaccount_icon'>
+      <% if user_signed_in? %>
+        <p><%= link_to 'Мой аккаунт', current_user %> | <%= link_to 'Выйти', destroy_user_session_path, method: :delete %></p></div>
+      <% else %>
+        <button class='signin_button'><%= link_to 'Sign In', new_user_session_path %></button> 
+        <button class='signup_button'><%= link_to 'Sign Up', new_user_registration_path %></button>
+      </div>
+      <% end %>
 </div>
 
     <% if notice %>
