--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,24 +1,47 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @post.postauthor %>
-</p>
+<div class="post_header">
+  <div class="user_info">
+    <div class="icon">
+    </div>
+    <p>
+      <%= @post.postauthor %>
+    </p>
+  </div>
+  <img src="../../assets/icon_more.png" alt="">
+</div>
 
 
 <p>
-  <strong>Content:</strong>
+ 
   <%= @post.content %>
 </p>
 
 <% if user_signed_in? %>
-<%= link_to 'Edit', edit_post_path(@post) %> |
+<%= link_to 'Редактировать', edit_post_path(@post) %> |
 <% end %>|
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Назад', posts_path %>
+
+<div class="post_actions">
+    <div class="comments">
+      <img src="" alt="">
+      <p>
+
+      </p>
+    </div>
+    <div class="like_action">
+      <%= button_to 'Like', post_likes_path(@post), method: :post %>
+      <p><%= @post.likes.count %> <%= (@post.likes.count) == 1 ? 'Like' : 'Likes'%></p>
+    </div>
+    <div class="pal_action">
+    <p><%= @post.likes.count %> <%= (@post.likes.count) == 1 ? 'Like' : 'Likes'%></p>
+    </div>
+    
+</div>
 
 <h2>Add a comment:</h2>
 <% if user_signed_in? %>
-<%= render "comments/form" %>
+<%= render "commentts/form" %>
 <% else %>
 <p>Please <%= link_to 'login', new_user_session_path %> or <%= link_to 'register', new_user_registration_path %> to comment.</p>
 <% end %>
