--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,37 +14,98 @@
  *= require_self
  */
 
- .top_menu {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+ .top-menu {
+    
+    
+    
     width: 100%;
-    height: 60px;
-    margin-bottom: 40px;
-    background: #eee;
+    
+   
     border-bottom: 1px solid #ddd;
   }
+
   .top_menu a {
     margin: 0 20px;
   }
+.website_content {
+  display: flex;
+  padding: 0px 60px;
+}
+
+.topnavbar {
+  width: 100% !important;
+}
 
   .navbar_actions {
     display: flex;
+    width: 100%;
+    height: 60px;
     justify-content: end;
+    align-items: center;
+    margin-bottom: 100px;
+
+    .navbar_links {
+      display: flex;
 
 
-    .myaccount_icon {
-      border-radius: 100px;
-      background-color: blue;
-      width: 30px;
-      height: 30px;
-      margin-right: 20px;
-      
+
+      .myaccount_icon {
+        border-radius: 100px;
+        background-color: blue;
+        width: 30px;
+        height: 30px;
+        margin-right: 20px;
+        
+      }
+  
+      .myaccount_link {
+        margin-right: 40px;
+        color: #656565;
+  
+      }
+  
+      .exit_link {
+        margin-right: 40px;
+        color: #656565;
+      }
     }
 
-    p {
-      margin-right: 40px;
+
+
+  }
+
+  .logo {
+    font-style: 48px;
+    color: black;
+  }
+
+  .signin_btn {
+    margin-right: 40px;
+    color: #656565;
+    padding: 2px;
+  }
+
+  .signup_btn {
+    padding: 10px 13px;
+    border-radius: 4px;
+    background-color: #E2E2E2;
+    color: black;
+  }
+
+
+  .sidenavbar {
+    width: 20%;
+    height: 100vh;
+    background-color: #E2E2E2;
+    display: flex;
+    flex-direction: column;
+    padding: 40px 20px;
+    margin-right: 100px;
+    border-radius: 20px;
+
+    a {
+      color: black;
+      margin-bottom: 10px;
+      font-size: 22px;
     }
-
-
   }
