--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -1,3 +1,42 @@
 // Place all the styles related to the categories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.categories {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    
+      &_list {
+        display: flex;
+        flex-wrap: wrap;
+    
+        
+        a {
+          margin-right: 10px;
+          margin-bottom: 10px;
+        }
+      }
+    }
+    
+    .createpost_btn {
+      background-color: #E2E2E2;
+      padding: 12px 22px;
+      outline: none;
+      border-radius: 4px;
+      color: black;
+    
+    }
+    .category_btn {
+      background-color: #E2E2E2;
+      padding: 8px 18px;
+      outline: none;
+      border-radius: 4px;
+      color: black;
+      
+    }
+    
+    .ctreatecategory_btn {
+      color: black;
+      margin-top: 20px;
+    }
+    
