--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,21 +1,14 @@
-// body {
-//   background-color: #fff;
-//   color: #333;
-//   }
 
-body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px; }
-
-// pre {
-//   background-color: #eee;
-//   padding: 10px;
-//   font-size: 11px; }
-
-a {
-  text-decoration: none;
+body {
+  font-family:Arial, Helvetica, sans-serif
 }
+  a {
+    text-decoration: none;
+  }
+pre {
+  background-color: #eee;
+  padding: 10px;
+  font-size: 11px; }
 
 th {
   padding-bottom: 5px; }
