--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,20 @@
-<table>
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Email</th>
-      <th>Username</th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.id %></td>
-        <td><%= link_to user.email, user %></td>
-        <td><%= user.username %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+
+<div class="users_container">
+    <div class="users_header">
+    <p>ID</p>
+    <p>E-mail</p>
+    <p>Никнеймы</p>
+    </div>
+
+    <div class="users_section">
+    
+      <% @users.each do |user| %>
+        <div class='user_info'>
+          <p><%= user.id %></p>
+          <p><%= link_to user.email, user %></p>
+          <p><%= user.username %></p>
+        </div>
+      <% end %>
+    </div>
+</div>
