--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -21,6 +21,11 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+  <div class="field">
+	<%= form.label :userpick %>
+	<%= form.file_field :userpick %>
+</div>
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
