--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -11,6 +11,10 @@ html, body, div {
 	font: inherit;
 	vertical-align: baseline;
 }
+
+p {
+	
+}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
