--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,7 +7,7 @@
 
     <div class="categories_header">
     <p>Название</p>
-    <p>Количество постов</p>
+    <p>Название</p>
     </div>
   <% Category.all.each do |cat| %>
   <div class="categories_list">
