--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,33 +1,51 @@
-<div class="form">
 
 
-<%= form_with(model: post) do |form| %>
-<% if post.errors.any? %>
-<div id="error_explanation">
-<h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
+<div class="postspage">
+  <div class="postspage_container">
+  
+  
 
-<ul>
-<% post.errors.each do |error| %>
-<li><%= error.full_message %></li>
-<% end %>
-</ul>
+        <div class="form">
+
+
+        <%= form_with(model: post) do |form| %>
+        <% if post.errors.any? %>
+        <div id="error_explanation">
+        <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
+
+        <ul>
+        <% post.errors.each do |error| %>
+        <li><%= error.full_message %></li>
+        <% end %>
+        </ul>
+        </div>
+        <% end %>
+
+
+        <div class="field">
+        <p>Текст поста <%= form.label :content %></p>
+        <%= form.text_area :content, :class => 'content_input' %>
+        </div>
+
+        <div class="field">
+            <%= form.label :category_id %>
+            <%= form.select :category_id, Category.pluck(:name, :id) %>
+        </div>
+
+        <div>
+            <%= form.label :image %>
+            <%= form.file_field :image %>
+        </div>
+
+        <div class="actions">
+        <button class='submitcreate_btn' >Создать пост <%= form.submit %></button>
+        </div>
+        <% end %>
+
+        </div>
+  
+  </div>
 </div>
-<% end %>
 
 
-<div class="field">
-<p>Текст поста <%= form.label :content %></p>
-<%= form.text_area :content %>
-</div>
 
-<div>
-	<%= form.label :image %>
-	<%= form.file_field :image %>
-</div>
-
-<div class="actions">
-<button>Создать пост <%= form.submit %></button>
-</div>
-<% end %>
-
-</div>
